# bianco

./: .gitignore  HelloJS.hs  bianco.cabal  cabal.project  cabal.project.freeze  cabal.project.local  flake.nix
lib/Bianco/: Model.hs
src/: Main.hs
