cabal-version       : 3.14

name                : bianco
version             : 1.0.0.0
build-type          : Simple

category            : Web
synopsis            : A simple Miso web-app template.
description         : This package provides a nice, orderly and well documented
                      Haskell SPA template.

homepage            : https://github.com/mastarija/bianco#readme
bug-reports         : https://github.com/mastarija/bianco/issues

author              : Luka Hadžiegrić
maintainer          : luka@mastarija.com

license             : MIT
copyright           : Copyright (C) Luka Hadžiegrić 2025

source-repository head
  type              : git
  location          : https://github.com/mastarija/bianco

common core
  ghc-options       : -Wall
  build-depends     : base
  default-language  : Haskell2010

library
  import            : core
  hs-source-dirs    : lib
  exposed-modules   : Bianco.Model

executable app
  import            : core
  main-is           : Main.hs
  hs-source-dirs    : src
  build-depends     : mtl
                    , miso
                    , aeson
                    , jsaddle
                    , containers
